Fixed the anchor points for the gizmo showcase section headings so that they are now no longer hidden under the fixed header.

--- a/tethys_gizmos/static/tethys_gizmos/less/gizmo_showcase.less
+++ b/tethys_gizmos/static/tethys_gizmos/less/gizmo_showcase.less
@@ -2,6 +2,17 @@
   margin: 0 50px;
 }
 
+.anchor {
+  display: block;
+  position: relative;
+  top: -80px;
+  visibility: hidden;
+}
+
+.docs-section {
+  padding-top: 20px;
+}
+
 #showcase_nav_list {
     position: fixed;
     top: 100px;
